--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <main>
-    <div class="container">
+    <div class="main-container"> <!-- For background color and width -->
 
       <header>
         <h1 class="light">Reliable, efficient delivery<br>
@@ -23,8 +23,9 @@
           to ensure that your project is successful</p>
       </header>
 
-      <section class="cards grid-container">
-        <div class=" card supervisor">
+      <section class="cards grid-container"> <!-- 4 card section -->
+
+        <div class="card supervisor">
           <div class="card-container">
             <h3>Supervisor</h3>
             <p>Monitors activity to identify project roadblocks</p>
@@ -63,12 +64,13 @@
             </div>
           </div>
         </div>
+
       </section>
 
     </div>
   </main>
 
-  <section class="footer">
+  <section class="footer"> <!-- For Background color -->
     <footer>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
